[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "starlette-prometheus"
version = "0.8.0"
description = "Prometheus integration for Starlette"
authors = ["José Antonio Perdiguero López <perdy@perdy.io>"]
license = "GPL-3.0+"
readme = "README.md"
repository = "https://github.com/PeRDy/starlette-prometheus"
keywords = ["starlette", "prometheus", "metrics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]
include = []
exclude = []

[tool.poetry.dependencies]
python = "^3.6"
starlette = ">=0.12.2"
prometheus_client = "^0.11"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-xdist = "^1.22"
pytest-cov = "^2.0"
clinner = "^1.12"
ipython = "^7.0"
requests = "^2.22.0"
ipdb = "^0.11"
black = {version = "^19.3b0",allow-prereleases = true}
isort = "^4.3"
flake8 = "^3.7"
Faker = "^8.2.0"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | build
  | dist
)/
'''
